--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <h1>درباره من</h1>
-    <p>!من عرفانم جون دل و خوشحالم اومدی یه سر به اینجا هم بزنی</p>
+    <p>!بنده عرفان رضایی هستم از دانشگاه آزاد اسلامی واحد خوی</p>
     <h2>مهارت‌های من:</h2>
 <ul>
     <li>HTML</li>
