--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     border-radius: 8px;
     margin-bottom: 30px;
 ">
-    <h1 style="font-size: 2.5em;">عرفانم👋</h1>
+    <h1 style="font-size: 2.5em;">!عرفانم</h1>
     <p style="font-size: 1.2em;">طراح و توسعه‌دهنده وب</p>
     <a href="about.html" style="
         background: #3498db;
