--- a/index.html
+++ b/index.html
@@ -3,57 +3,36 @@
 <head>
     <title>سایت شخصی من</title>
     <style>
-    body {
-        font-family: Tahoma;
-        text-align: center;
-        background: #f4f4f4;
-    }
-    a {
-        color: blue;
-        text-decoration: none;
-    }
-</style>
+        body {
+            font-family: Tahoma;
+            text-align: center;
+            margin: 40px auto;
+            max-width: 600px;
+            line-height: 1.6;
+            padding: 20px;
+        }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+        h1 {
+            margin-bottom: 10px;
+        }
+        .nav {
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
-    <div class="hero" style="
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                url('hero-image.jpg');
-    background-size: cover;
-    color: white;
-    text-align: center;
-    padding: 100px 20px;
-    border-radius: 8px;
-    margin-bottom: 30px;
-">
-    <h1 style="font-size: 2.5em;">!عرفانم</h1>
-    <p style="font-size: 1.2em;">طراح و توسعه‌دهنده وب</p>
-    <a href="about.html" style="
-        background: #3498db;
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
-        display: inline-block;
-        margin-top: 20px;
-    ">درباره من بیشتر بدانید</a>
-</div>
-<div class="box">
-    <h2>خدمات من</h2>
-    <div style="display: flex; flex-wrap: wrap; gap: 20px;">
-        <!-- خدمت 1 -->
-        <div style="flex: 1; min-width: 200px;">
-            <h3>🎨 طراحی وب</h3>
-            <p>طراحی سایت‌های مدرن و واکنشگرا</p>
-        </div>
-        <div style="flex: 1; min-width: 200px;">
-            <h3>💻 توسعه فرانت‌اند</h3>
-            <p>کدنویسی با HTML, CSS, JavaScript</p>
-        </div>
+    <h1>سلام، خوش آمدید</h1>
+    <p>طراح وب و توسعه‌دهنده</p>
+    
+    <p>.این صفحه شخصی منه مو تونید با من از طریق لینک‌های زیر در ارتباط باشید</p>
+    
+    <div class="nav">
+        <a href="about.html">درباره من</a> | 
+        <a href="contact.html">تماس</a> |
+        <a href="projects.html">پروژه‌ها</a>
     </div>
-</div>
-    <h1>برنامه نویسی</h1>
-    <p>.این صفحه اصلی منه</p>
-    <a href="about.html">درباره من</a> | 
-    <a href="contact.html">تماس</a> |
-    <a href="projects.html">پروژه</a>
 </body>
 </html>
